# data-science-course

./: README.md  pyproject.toml
data_science_course/: Workshop_2.ipynb  Workshop_3.ipynb  Workshop_4.ipynb
data_science_curse/: Workshop_1.ipynb
